# ConnectCare

./: README.md  pyproject.toml  report.md
src/smartmedix/: crew.py  main.py
src/smartmedix/config/: agents.yaml  tasks.yaml
