[tool.poetry]
name = "smartmedix"
version = "0.1.0"
description = "SmartMedix using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
smartmedix = "smartmedix.main:run"
train = "smartmedix.main:train"
replay = "smartmedix.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
